--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -6,7 +6,7 @@
       xmlns:vm="clr-namespace:Marlin.ViewModels.Main"
       xmlns:local="clr-namespace:Marlin.Views.Main"
       mc:Ignorable="d" 
-      d:Height="450" 
+      d:Height="1450" 
       d:Width="800"
       ShowsNavigationUI="False"
       Foreground="{Binding Path=FontColor}"
@@ -93,7 +93,7 @@
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
-                                                    <RowDefinition Height="*"/>
+                                                    <RowDefinition Height="{Binding Path=LengthImage}"/>
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Row="0"
@@ -139,7 +139,7 @@
                                                 </Grid>
 
                                                 <Grid Grid.Row="2"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="100"/>
@@ -160,7 +160,7 @@
                                                 </Grid>
 
                                                 <Grid Grid.Row="3"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="100"/>
@@ -181,10 +181,10 @@
                                                 </Grid>
 
                                                 <Grid Grid.Row="4"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="{Binding Path=LengthImage}"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <Button Grid.Column="0"
@@ -209,11 +209,10 @@
                                                         <TextBox Grid.Column="0" 
                                                                  FontSize="15"
                                                                  Margin="0,0,15,0"
-                                                             IsReadOnly="True"
-                                                             MinWidth="100"
-                                                             Text="{Binding Path=BackgraundImage,UpdateSourceTrigger=PropertyChanged}"
-                                                             VerticalAlignment="Center"
-                                                             HorizontalContentAlignment="Center"/>
+                                                                 IsReadOnly="True"
+                                                                 Text="{Binding Path=BackgraundImage,UpdateSourceTrigger=PropertyChanged}"
+                                                                 VerticalAlignment="Center"
+                                                                 HorizontalContentAlignment="Center"/>
 
                                                         <Button Grid.Column="1"
                                                                 BorderThickness="0"
@@ -230,7 +229,7 @@
                                                 </Grid>
 
                                                 <Grid Grid.Row="5"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -262,7 +261,7 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,13"
+                                                   Margin="10"
                                                    FontSize="15"
                                                    Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                    FontWeight="Bold"
@@ -271,11 +270,11 @@
                                             <Grid Grid.Column="1">
                                                 <Grid.RowDefinitions>
                                                     <RowDefinition Height="*"/>
-                                                    <RowDefinition Height="*"/>
+                                                    <RowDefinition Height="{Binding Path=LengthSay}"/>
                                                 </Grid.RowDefinitions>
 
-                                                <Grid Grid.Row="0"
-                                                  Margin="0,10">
+                                                <Grid Grid.Row="1"
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -295,7 +294,7 @@
                                                           HorizontalContentAlignment="Center"/>
                                                 </Grid>
 
-                                                <Grid Grid.Row="1"
+                                                <Grid Grid.Row="0"
                                                   Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
@@ -475,7 +474,6 @@
 
                                                     <TextBox Grid.Column="1"
                                                              FontSize="15"
-                                                             MinWidth="100"
                                                              IsReadOnly="True"
                                                              Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                              VerticalAlignment="Center"
