--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -100,7 +100,7 @@
                                                   Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
@@ -110,18 +110,34 @@
                                                            HorizontalAlignment="Center"
                                                            Text="Цвет внешнего фона:"/>
 
-                                                    <TextBox Grid.Column="1"
-                                                         MaxLength="9"
-                                                         FontSize="15"
-                                                         Text="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
-                                                         HorizontalContentAlignment="Center"/>
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="100"/>
+                                                            <ColumnDefinition Width="300"/>
+                                                        </Grid.ColumnDefinitions>
+                                                        
+                                                        <TextBox Grid.Column="0"
+                                                                 Margin="0,0,15,0"
+                                                                 MaxLength="7"
+                                                                 FontSize="15"
+                                                                 Text="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                 HorizontalContentAlignment="Center"/>
+
+                                                        <Slider Grid.Column="1"
+                                                                Minimum="0"
+                                                                Value="{Binding Path=ExternalBackgroundColorInt,UpdateSourceTrigger=PropertyChanged}"
+                                                                Width="auto"
+                                                                VerticalAlignment="Center"
+                                                                TickFrequency="50000"
+                                                                Maximum="16777215"/>
+                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="1"
-                                                  Margin="0,10">
+                                                      Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
@@ -131,18 +147,35 @@
                                                            HorizontalAlignment="Center"
                                                            Text="Цвет внутреннего фона:"/>
 
-                                                    <TextBox Grid.Column="1"
-                                                         MaxLength="9"
-                                                         FontSize="15"
-                                                         Text="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
-                                                         HorizontalContentAlignment="Center"/>
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="100"/>
+                                                            <ColumnDefinition Width="300"/>
+                                                        </Grid.ColumnDefinitions>
+                                                        
+                                                        <TextBox Grid.Column="0"
+                                                                 Margin="0,0,15,0"
+                                                                 MaxLength="7"
+                                                                 FontSize="15"
+                                                                 Text="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                 HorizontalContentAlignment="Center"/>
+
+                                                        <Slider Grid.Column="1"
+                                                                Minimum="0"
+                                                                Value="{Binding Path=InternalBackgroundColorInt,UpdateSourceTrigger=PropertyChanged}"
+                                                                Width="auto"
+                                                                VerticalAlignment="Center"
+                                                                TickFrequency="50000"
+                                                                Maximum="16777215"/>
+                                                    </Grid>
+                                                    
                                                 </Grid>
 
                                                 <Grid Grid.Row="2"
                                                       Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
@@ -152,18 +185,34 @@
                                                            HorizontalAlignment="Center"
                                                            Text="Цвет текста:"/>
 
-                                                    <TextBox Grid.Column="1"
-                                                         MaxLength="9"
-                                                         FontSize="15"
-                                                         Text="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
-                                                         HorizontalContentAlignment="Center"/>
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="100"/>
+                                                            <ColumnDefinition Width="300"/>
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <TextBox Grid.Column="0"
+                                                                 Margin="0,0,15,0"
+                                                                 MaxLength="7"
+                                                                 FontSize="15"
+                                                                 Text="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                 HorizontalContentAlignment="Center"/>
+
+                                                        <Slider Grid.Column="1"
+                                                                Minimum="0"
+                                                                Value="{Binding Path=FontColorInt,UpdateSourceTrigger=PropertyChanged}"
+                                                                Width="auto"
+                                                                VerticalAlignment="Center"
+                                                                TickFrequency="50000"
+                                                                Maximum="16777215"/>
+                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="3"
                                                       Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
-                                                        <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="auto"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
@@ -173,11 +222,27 @@
                                                            HorizontalAlignment="Center"
                                                            Text="Цвет объектов:"/>
 
-                                                    <TextBox Grid.Column="1"
-                                                         MaxLength="9"
-                                                         FontSize="15"
-                                                         Text="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                                                         HorizontalContentAlignment="Center"/>
+                                                    <Grid Grid.Column="1">
+                                                        <Grid.ColumnDefinitions>
+                                                            <ColumnDefinition Width="100"/>
+                                                            <ColumnDefinition Width="300"/>
+                                                        </Grid.ColumnDefinitions>
+
+                                                        <TextBox Grid.Column="0"
+                                                                 Margin="0,0,15,0"
+                                                                 MaxLength="7"
+                                                                 FontSize="15"
+                                                                 Text="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                                 HorizontalContentAlignment="Center"/>
+
+                                                        <Slider Grid.Column="1"
+                                                                Minimum="0"
+                                                                Value="{Binding Path=PageColorInt,UpdateSourceTrigger=PropertyChanged}"
+                                                                Width="auto"
+                                                                VerticalAlignment="Center"
+                                                                TickFrequency="50000"
+                                                                Maximum="16777215"/>
+                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="4"
@@ -245,7 +310,9 @@
                                                     <Slider Grid.Column="1" 
                                                             Width="100" 
                                                             Minimum="100" 
+                                                            VerticalAlignment="Center"
                                                             Maximum="1000" 
+                                                            TickFrequency="1"
                                                             Value="{Binding Path=ImageScail}"/>
                                                 </Grid>
                                             </Grid>
@@ -374,11 +441,12 @@
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
-                                                           VerticalAlignment="Center"
-                                                           HorizontalAlignment="Center"
-                                                           Text="Имя / Логин:"/>
+                                                               FontSize="15"
+                                                               Margin="0,0,15,0"
+                                                               Padding="10,0"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"
+                                                               Text="Имя / Логин:"/>
 
                                                     <TextBox Grid.Column="1"
                                                          FontSize="15"
@@ -474,6 +542,7 @@
 
                                                     <TextBox Grid.Column="1"
                                                              FontSize="15"
+                                                             Padding="10,0"
                                                              IsReadOnly="True"
                                                              Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                              VerticalAlignment="Center"
