--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -17,10 +17,11 @@
     <Grid Background="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}">
         <Grid>
             <Grid.Background>
-                <ImageBrush ImageSource="{Binding Path=BackgraundImagePath}" 
-                            TileMode="Tile" 
-                            Viewport="{Binding Path=ImageViewport}" 
-                            ViewportUnits="Absolute"/>
+                <ImageBrush ImageSource="{Binding Path=BackgraundImagePath}"
+                            Stretch="{Binding Path=Stretch}"
+                            TileMode="{Binding Path=TileMode}"
+                            ViewportUnits="{Binding Path=ViewportUnits}"
+                            Viewport="{Binding Path=ImageViewport}"/>
             </Grid.Background>
             
             <Grid.RowDefinitions>
@@ -94,6 +95,7 @@
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="{Binding Path=LengthImage}"/>
+                                                    <RowDefinition Height="{Binding Path=LengthScale}"/>
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Row="0"
@@ -293,7 +295,27 @@
                                                     </Grid>
                                                 </Grid>
 
-                                                <Grid Grid.Row="5"
+                                                <Grid Grid.Row="5" 
+                                                      Margin="0,10">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="auto"/>
+                                                    </Grid.ColumnDefinitions>
+
+                                                    <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Center"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Бесшовное заполнение:"/>
+
+                                                    <CheckBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          IsChecked="{Binding Path=Seamless,UpdateSourceTrigger=PropertyChanged}"
+                                                          HorizontalContentAlignment="Center"/>
+                                                </Grid>
+
+                                                <Grid Grid.Row="6"
                                                       Margin="0,10">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
